--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,7 @@
 }
 
 .listbox__item {
+    user-select: none;
     margin-top: 5px;
     padding: 10px;
     border-radius: 6px;
@@ -25,6 +26,6 @@
     color: #fff;
 }
 
-.listbox__item:hover {
+.listbox__item-hover:hover {
     background: rgb(220, 220, 220);
 }
