--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,8 @@
     padding: 20px;
     height: 400px;
     overflow-y: scroll;
+    outline: 0;
+    scrollbar-width: none;
 }
 
 .listbox__item {
@@ -47,4 +49,10 @@
 
 .listbox__item-hover-dark:hover {
     background: rgb(43, 48, 53);
+}
+
+/* -- Scrollbar -- */
+
+.listbox::-webkit-scrollbar {
+    display: none;
 }
